scrollbar page auto, body height fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,7 @@
 body {
     overflow-y: hidden;
+    height: 100vh;
+    margin: 0;
 }
 
 #navparent {
@@ -48,7 +50,7 @@ body {
     margin: 0;
     left: 0;
     height: 95vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .nav:hover {
